tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/virtualservice/redirect_port_and_scheme/tproxy/to_tproxy/_test_context/VirtualService.761427882.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-98059
spec:
  hosts:
  - tproxy
  http:
  - match:
    - uri:
        exact: /foo
    redirect:
      derivePort: FROM_REQUEST_PORT
      scheme: https
